--- a/index.html
+++ b/index.html
@@ -17,12 +17,48 @@
     <![endif]-->
   </head>
   <body>
-  <div class="container">
-  <div class="row">
-  	<div class="col-sm-6 col-sm-offset-6"><h1>Hello, world!</h1></div>
+  <!-- begin topline  -->
+  <div class="topline">
+     <div class="topline__in">
+        <div class="topline__subscribe">Subscribe Now</div>
+        <div class="topline__social">
+          <ul>
+            <li><a href="#"><img src="" alt="" class="social__fb"></a></li>
+            <li><a href="#"><img src="" alt="" class="social__twitter"></a></li>
+            <li><a href="#"><img src="" alt="" class="social__rss"></a></li>
+          </ul>
+        </div>
+      </div>
   </div>
-    </div>
+  <!-- end topline -->
 
+  <!-- begin site-header  -->
+  <header class="site_header">
+    <div class="site_header__logo">
+      <p class="logo_big"><span>News</span>Plex</p>
+      <small>Premium magazine theme</small>
+    </div>
+    <div class="site_header__banner">
+      <img src="http://placehold.it/468x60" alt="">
+    </div>
+  </header>
+
+  <!-- begin site_nav  -->
+  <nav class="site_nav">
+    <div class="site_nav__in">
+      <ul>
+        <li><a href="#">Homepage</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Full width</a></li>
+        <li><a href="#">Gallery</a></li>
+        <li><a href="#">Headings</a></li>
+        <li><a href="#">Posts</a></li>
+        <li><a href="#">Contacts</a></li>
+      </ul>
+    </div>
+  </nav>
+  <!-- end site_nav -->
+  <!-- end site-header -->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
