index is done alpha

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       <img src="http://placehold.it/468x60" alt="">
     </div>
   </header>
+  <!-- end site-header -->
 
   <!-- begin site_nav  -->
   <nav class="site_nav">
@@ -58,7 +59,371 @@
     </div>
   </nav>
   <!-- end site_nav -->
-  <!-- end site-header -->
+  
+  <!-- begin slider  -->
+  <div class="slider">
+    <div class="slider__entry">
+        <div class="entry_photo"><img src="http://placehold.it/670x340" alt=""></div>
+        <div class="entry_desc">
+          <h3 class="entry__title">Temporibus autem quibusdam et aut officiis</h3>
+          <p class="entry__text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae...<a class="more">read more</a></p>
+        </div>
+    </div>
+    <div class="slider__switsher">
+      <ul>
+        <li class="is_active"><i></i><a href="#">
+          <img src="http://placehold.it/50x50" alt="">
+          <p class="entry_title">Temporibus autem quibusdam et aut officiis</p>
+          <p class="entry_meta">Posted on 4th Dec, 2010 by <a href="#" class="author_link">Admin</a></p>
+        </a></li>
+        <li><i></i><a href="#">
+          <img src="http://placehold.it/50x50" alt="">
+          <p class="entry_title">Temporibus autem quibusdam et aut officiis</p>
+          <p class="entry_meta">Posted on 4th Dec, 2010 by <a href="#" class="author_link">Admin</a></p>
+        </a></li>
+        <li><i></i><a href="#">
+          <img src="http://placehold.it/50x50" alt="">
+          <p class="entry_title">Temporibus autem quibusdam et aut officiis</p>
+          <p class="entry_meta">Posted on 4th Dec, 2010 by <a href="#" class="author_link">Admin</a></p>
+        </a></li>
+        <li><i></i><a href="#">
+          <img src="http://placehold.it/50x50" alt="">
+          <p class="entry_title">Temporibus autem quibusdam et aut officiis</p>
+          <p class="entry_meta">Posted on 4th Dec, 2010 by <a href="#" class="author_link">Admin</a></p>
+        </a></li>
+      </ul>
+    </div>
+  </div>
+  <!-- end slider -->
+  <!-- begin l  -->
+  <div class="l">
+
+    <!-- begin content  -->
+    <div class="content">
+      <!-- begin articles  -->
+      <section class="articles">
+        <h2 class="section_title">Featured articles</h2>
+        <div class="articles_cards">
+           <div class="card">
+            <div class="img"><img src="http://placehold.it/194x104" alt=""></div>
+            <div class="title">Sed ut perspiciatis unde omnis iste</div>
+            <div class="comments">21</div>
+            <div class="meta">Posted on 4th Dec, 2010 by <a href="#" class="author_link">Admin</a></div>
+            <p class="text">Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat...</p>
+            <a href="#" class="more">Read more</a>
+          </div>
+          <div class="card">
+            <div class="img"><img src="http://placehold.it/194x104" alt=""></div>
+            <div class="title">Sed ut perspiciatis unde omnis iste</duv>
+            <div class="comments">21</div>
+            <div class="meta">Posted on 4th Dec, 2010 by <a href="#" class="author_link">Admin</a></div>
+            <p class="text">Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat...</p>
+            <a href="#" class="more">Read more</a>
+          </div>
+           <div class="card">
+            <div class="img"><img src="http://placehold.it/194x104" alt=""></div>
+            <div class="title">Sed ut perspiciatis unde omnis iste</duv>
+            <div class="comments">21</div>
+            <div class="meta">Posted on 4th Dec, 2010 by <a href="#" class="author_link">Admin</a></div>
+            <p class="text">Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat...</p>
+            <a href="#" class="more">Read more</a>
+          </div>
+        </div>
+      </section>
+      <!-- end articles -->
+
+      <!-- begin photos  -->
+      <section class="photos">
+        <h2 class="section_title">News in photos</h2>
+        <div class="photo__big">
+            <div class="photo"><img src="http://placehold.it/270x300" alt=""></div>
+            <div class="photo_desc">
+              <h3 class="photo__title">Temporibus autem quibusdam et aut officiis</h3>
+              <p class="photo__text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae...<a class="more">read more</a></p>
+            </div>
+        </div>
+        <div class="photo__enties">
+          <a href="#"><img src="http://placehold.it/60x60" alt=""></a>
+          <a href="#"><img src="http://placehold.it/60x60" alt=""></a>
+          <a href="#"><img src="http://placehold.it/60x60" alt=""></a>
+          <a href="#"><img src="http://placehold.it/60x60" alt=""></a>
+          <a href="#"><img src="http://placehold.it/60x60" alt=""></a>
+          <a href="#"><img src="http://placehold.it/60x60" alt=""></a>
+          <a href="#"><img src="http://placehold.it/60x60" alt=""></a>
+          <a href="#"><img src="http://placehold.it/60x60" alt=""></a>
+          <a href="#"><img src="http://placehold.it/60x60" alt=""></a>
+          <a href="#"><img src="http://placehold.it/60x60" alt=""></a>
+          <a href="#"><img src="http://placehold.it/60x60" alt=""></a>
+          <a href="#"><img src="http://placehold.it/60x60" alt=""></a>
+          <a href="#"><img src="http://placehold.it/60x60" alt=""></a>
+          <a href="#"><img src="http://placehold.it/60x60" alt=""></a>
+          <a href="#"><img src="http://placehold.it/60x60" alt=""></a>
+          <a href="#"><img src="http://placehold.it/60x60" alt=""></a>
+          <a href="#"><img src="http://placehold.it/60x60" alt=""></a>
+          <a href="#"><img src="http://placehold.it/60x60" alt=""></a>
+          <a href="#"><img src="http://placehold.it/60x60" alt=""></a>
+          <a href="#"><img src="http://placehold.it/60x60" alt=""></a>
+        </div>
+
+      </section>
+      <!-- end photos -->
+      
+      <!-- begin updates  -->
+      <section class="updates">
+        <h2 class="section_title">News in photos</h2>
+        <div class="switcher">
+          <ul>
+            <li class="is_active"><a href="#">Design news</a></li>
+            <li><a href="#">Contents</a></li>
+            <li><a href="#">Global</a></li>
+            <li><a href="#">Programming</a></li>
+            <li class="popular"><a href="#">Most popular</a></li>
+          </ul>
+          <div class="switcher__card">
+            <div class="title">Sed ut perspiciatis unde omnis iste</div>
+            <div class="meta">Posted on 4th Dec, 2010 by <a href="#" class="author_link">Admin</a></div>
+            <div class="img"><img src="http://placehold.it/184x134" alt=""></div>
+            <div class="comments">21</div>
+            <div class="text"><p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p><p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p></div>
+            <a href="" class="cat_more">More from thic category</a>
+            <a href="#" class="more">Read more</a>
+          </div>
+        </div>
+      </section>
+      <!-- end updates -->
+
+      <!-- begin recent  -->
+      <section class="recent">
+        <h2 class="section_title">Recent articles</h2>
+        <div class="articles_cards">
+           <div class="card">
+            <div class="img"><img src="http://placehold.it/194x104" alt=""></div>
+            <div class="title">Sed ut perspiciatis unde omnis iste</div>
+            <div class="comments">21</div>
+            <div class="meta">Posted on 4th Dec, 2010 by <a href="#" class="author_link">Admin</a></div>
+            <p class="text">Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat...</p>
+            <a href="#" class="more">Read more</a>
+          </div>
+          <div class="card">
+            <div class="img"><img src="http://placehold.it/194x104" alt=""></div>
+            <div class="title">Sed ut perspiciatis unde omnis iste</duv>
+            <div class="comments">21</div>
+            <div class="meta">Posted on 4th Dec, 2010 by <a href="#" class="author_link">Admin</a></div>
+            <p class="text">Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat...</p>
+            <a href="#" class="more">Read more</a>
+          </div>
+           <div class="card">
+            <div class="img"><img src="http://placehold.it/194x104" alt=""></div>
+            <div class="title">Sed ut perspiciatis unde omnis iste</duv>
+            <div class="comments">21</div>
+            <div class="meta">Posted on 4th Dec, 2010 by <a href="#" class="author_link">Admin</a></div>
+            <p class="text">Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat...</p>
+            <a href="#" class="more">Read more</a>
+          </div>
+        </div>
+      </section>
+      <!-- end recent -->
+      <!-- begin recent_comments  -->
+      <section class="recent_comments">
+        <h2 class="section_title">Recent comments</h2>
+        <div class="comment">
+            <div class="comment_photo"><img src="http://placehold.it/325x250" alt=""></div>
+            <div class="comment_desc">
+              <h3 class="comment_title"><a href="#">Sed ut perspiciatis unde omnis</a></h3>
+              <p class="comment_text">Itaque earum rerum hic tenetur a sapiente...<a class="more">17 comments</a></p>
+            </div>
+        </div>
+        <div class="comment">
+            <div class="comment_photo"><img src="http://placehold.it/325x250" alt=""></div>
+            <div class="comment_desc">
+              <h3 class="comment_title"><a href="#">Sed ut perspiciatis unde omnis</a></h3>
+              <p class="comment_text">Itaque earum rerum hic tenetur a sapiente...<a class="more">31 comments</a></p>
+            </div>
+        </div>
+      </section>
+      <!-- end recent_comments -->
+    </div>
+    <!-- end content -->
+
+    <!-- begin sidebar  -->
+    <div class="sidebar">
+      <!-- begin side__bannders  -->
+      <section class="side__bannders">
+        <div class="banner"><a href="#"><img src="http://placehold.it/125x125" alt=""></a></div>
+        <div class="banner"><a href="#"><img src="http://placehold.it/125x125" alt=""></a></div>
+      </section>
+      <!-- end side__bannders -->
+
+      <!-- begin side__social  -->
+      <section class="side__social">
+        <div class="social_item">
+          <a href="#" class="social_rss"></a>
+          <div class="follow_num">1203</div>
+          <div class="follow_name">Subscribers</div>
+        </div>
+
+        <div class="social_item">
+          <a href="#" class="social_twitter"></a>
+          <div class="follow_num">2107</div>
+          <div class="follow_name">Followers</div>
+        </div>
+      </section>
+      <!-- end side__social -->
+
+      <!-- begin side_search  -->
+      <section class="side__search">
+        <form action="#">
+          <input type="text" placeholder="type and hit enter">
+        </form>
+      </section>
+      <!-- end side_search -->
+
+      <!-- begin side__nav  -->
+      <section class="side__nav">
+        <nav>
+          <li class="is-active"><a href="#">Design and Interfaces <i></i></a></li>
+          <li><a href="#">Design and Interfaces <i></i></a></li>
+          <li><a href="#">Design and Interfaces <i></i></a></li>
+          <li><a href="#">Design and Interfaces <i></i></a></li>
+          <li><a href="#">Design and Interfaces <i></i></a></li>
+          <li><a href="#">Design and Interfaces <i></i></a></li>
+          <li><a href="#">Design and Interfaces <i></i></a></li>
+        </nav>
+      </section>
+      <!-- end side__nav -->
+      <!-- begin side__switcher  -->
+      <section class="side__switcher">
+        <div class="switcher__in">
+          <ul>
+            <li class="is_active"><a href="#">Recent articles</a></li>
+            <li><a href="#">Popular articles</a></li>
+            <li><a href="#">Latest video</a></li>
+          </ul>
+          <div class="switcher__card">
+            <div class="card_entry">
+              <div class="entry_photo"><img src="http://placehold.it/60x60" alt=""></div>
+              <div class="entry_title">Duis aute irure dolor in reprehenderit</div>
+              <div class="entry_meta">Posted on 4th Dec, 2010</div>
+            </div>
+            <div class="card_entry">
+              <div class="entry_photo"><img src="http://placehold.it/60x60" alt=""></div>
+              <div class="entry_title">Duis aute irure dolor in reprehenderit</div>
+              <div class="entry_meta">Posted on 4th Dec, 2010</div>
+            </div>
+            <div class="card_entry">
+              <div class="entry_photo"><img src="http://placehold.it/60x60" alt=""></div>
+              <div class="entry_title">Duis aute irure dolor in reprehenderit</div>
+              <div class="entry_meta">Posted on 4th Dec, 2010</div>
+            </div>
+            <div class="card_entry">
+              <div class="entry_photo"><img src="http://placehold.it/60x60" alt=""></div>
+              <div class="entry_title">Duis aute irure dolor in reprehenderit</div>
+              <div class="entry_meta">Posted on 4th Dec, 2010</div>
+            </div>
+            <div class="card_entry">
+              <div class="entry_photo"><img src="http://placehold.it/60x60" alt=""></div>
+              <div class="entry_title">Duis aute irure dolor in reprehenderit</div>
+              <div class="entry_meta">Posted on 4th Dec, 2010</div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- end side__switcher -->
+      <!-- begin side_tweet  -->
+      <section class="side_tweet">
+        <div class="tweet_in">
+          <div class="tweet_entry"><p>@<a href="#">John Doe</a>: Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus.</p></div>
+          <div class="twitter_link"><a href="#">Follow on Twitter</a></div>
+        </div>
+      </section>
+      <!-- end side_tweet -->
+      <!-- begin side__bannders  -->
+      <section class="side__bannders">
+        <div class="banner"><a href="#"><img src="http://placehold.it/125x125" alt=""></a></div>
+        <div class="banner"><a href="#"><img src="http://placehold.it/125x125" alt=""></a></div>
+      </section>
+      <!-- end side__bannders -->
+    </div>
+    <!-- end sidebar -->
+  </div>
+  <!-- end l -->
+  <!-- begin site-footer  -->
+  <footer class="site-footer">
+    <div class="footer__in">
+      <!-- begin footer_latest  -->
+      <div class="footer_latest">
+        <h2 class="section_title">Latest tweets</h2>
+        <div class="tweet_card">
+          <div class="tweet_title">Nemo enim ipsam voluptatem</div>
+          <div class="tweet_text"><p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus</p></div>
+          <div class="tweet_meta">
+            <a href="#">http://bit.ly/elKM</a>
+            <div class="date">12 hours ago</div>
+          </div>
+        </div>
+        <div class="tweet_card">
+          <div class="tweet_title">Nemo enim ipsam voluptatem</div>
+          <div class="tweet_text"><p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus</p></div>
+          <div class="tweet_meta">
+            <a href="#">http://bit.ly/elKM</a>
+            <div class="date">12 hours ago</div>
+          </div>
+        </div>
+      </div>
+      <!-- end footer_latest -->
+      <!-- begin footer_recent  -->
+      <div class="footer_recent">
+        <h2 class="section_title">Recent posts</h2>
+        <div class="text"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati illo sint, impedit ex nulla nisi velit cum sapiente, iste unde expedita sequi ab excepturi architecto commodi incidunt tenetur a aut.</p></div>
+      </div>
+      <!-- end footer_recent -->
+
+            <!-- begin footer_comments  -->
+      <div class="footer_comments">
+        <h2 class="section_title">Latest tweets</h2>
+        <div class="commet_card">
+          <div class="comment_title">Nemo enim ipsam voluptatem</div>
+          <div class="comment_text"><p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus</p></div>
+          <div class="comment_meta">
+            <a href="#">http://bit.ly/elKM</a>
+            <div class="date">12 hours ago</div>
+          </div>
+        </div>
+        <div class="commet_card">
+          <div class="comment_title">Nemo enim ipsam voluptatem</div>
+          <div class="comment_text"><p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus</p></div>
+          <div class="comment_meta">
+            <a href="#">http://bit.ly/elKM</a>
+            <div class="date">12 hours ago</div>
+          </div>
+        </div>
+      </div>
+      <!-- end footer_comments -->
+
+      <!-- begin footer_tags  -->
+      <div class="footer_tags">
+        <h2 class="section_title">Tags</h2>
+        <div class="tags_card">
+          <a href="#">Nam</a><a href="#">libero</a><a href="#" class="is-popular">tempore</a><a href="#">cum</a><a href="#">soluta</a><a href="#">nobis</a><a href="#">temporibus</a><a href="#">lorem</a><a href="#">ipsum</a><a href="#">dolor</a><a href="#">sit</a><a href="#">amet</a><a href="#">Nam</a><a href="#">libero</a><a href="#">tempore</a><a href="#">cum</a><a href="#">soluta</a><a href="#">nobis</a><a href="#">Temporibus</a><a href="#">autem</a><a href="#">quibusdam</a>
+        </div>
+      </div>
+      <!-- end footer_tags -->
+
+      <!-- begin bottom_line  -->
+      <div class="bottom_line">
+        <div class="copy">Copyright © 2010 - NEWSPLEX - All rights reserved. Design by Ionut Girbea</div>
+        <div class="bottom_social">
+          <a href="#" class="footer_social_delicious"></a>
+          <a href="#" class="footer_social_flickr"></a>
+          <a href="#" class="footer_social_facebook"></a>
+          <a href="#" class="footer_social_twitter"></a>
+          <a href="#" class="footer_social_stumbleupon"></a>
+        </div>
+      </div>
+      <!-- end bottom_line -->
+    </div>
+  </footer>
+  <!-- end site-footer -->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
