with sprite mixin

--- a/index.html
+++ b/index.html
@@ -20,26 +20,30 @@
   <!-- begin topline  -->
   <div class="topline">
      <div class="topline__in">
+     <div class="topline__block">
         <div class="topline__subscribe">Subscribe Now</div>
         <div class="topline__social">
           <ul>
-            <li><a href="#"><img src="" alt="" class="social__fb"></a></li>
-            <li><a href="#"><img src="" alt="" class="social__twitter"></a></li>
-            <li><a href="#"><img src="" alt="" class="social__rss"></a></li>
+            <li><a href="#" class="fb"></a></li>
+            <li><a href="#" class="tw"></a></li>
+            <li><a href="#" class="rss"></a></li>
           </ul>
         </div>
+      </div>
       </div>
   </div>
   <!-- end topline -->
 
   <!-- begin site-header  -->
   <header class="site_header">
-    <div class="site_header__logo">
-      <p class="logo_big"><span>News</span>Plex</p>
-      <small>Premium magazine theme</small>
-    </div>
-    <div class="site_header__banner">
-      <img src="http://placehold.it/468x60" alt="">
+    <div class="site_header__in">
+       <div class="site_header__logo">
+         <p class="logo_big"><span>News</span>Plex</p>
+         <small>Premium magazine theme</small>
+       </div>
+      <div class="site_header__banner">
+        <img src="http://placehold.it/468x60" alt="">
+      </div>
     </div>
   </header>
   <!-- end site-header -->
