--- a/index.html
+++ b/index.html
@@ -68,11 +68,9 @@
           <img class="entry_photo" src="http://placehold.it/670x340" alt="">
           <div class="entry_desc">
             <h3 class="entry_title">Temporibus autem quibusdam et aut officiis</h3>
-            <p class="entry_text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae...</p><a href="#" class="more">read more</a>
+            <p class="entry_text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae...<a href="#" class="more">read more</a></p>
           </div>
       </div>
-      <div class="tester1"></div>
-      <div class="tester2"></div>
       <div class="slider_switsher">
         <ul>
           <li class="is-active">
@@ -358,10 +356,8 @@
       <!-- end side__switcher -->
       <!-- begin side_tweet  -->
       <section class="side_tweet">
-        <div class="tweet_in">
           <div class="tweet_entry"><p>@<a href="#">John Doe</a>: Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus.</p></div>
           <div class="twitter_link"><a href="#">Follow on Twitter</a></div>
-        </div>
       </section>
       <!-- end side_tweet -->
       <!-- begin side__bannders  -->
@@ -377,8 +373,9 @@
   <!-- begin site-footer  -->
   <footer class="site_footer">
     <div class="footer__in">
+<section class="infoline">
       <!-- begin footer_latest  -->
-      <div class="footer_latest">
+      <section class="footer_latest">
         <h2 class="section_title">Latest tweets</h2>
         <div class="tweet_card">
           <div class="tweet_title">Nemo enim ipsam voluptatem</div>
@@ -396,17 +393,17 @@
             <div class="date">12 hours ago</div>
           </div>
         </div>
-      </div>
-      <!-- end footer_latest -->
+      </section>
+          <!-- end footer_latest -->
       <!-- begin footer_recent  -->
-      <div class="footer_recent">
+      <section class="footer_recent">
         <h2 class="section_title">Recent posts</h2>
         <div class="text"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati illo sint, impedit ex nulla nisi velit cum sapiente, iste unde expedita sequi ab excepturi architecto commodi incidunt tenetur a aut.</p></div>
-      </div>
+      </section>
       <!-- end footer_recent -->
 
             <!-- begin footer_comments  -->
-      <div class="footer_comments">
+      <section class="footer_comments">
         <h2 class="section_title">Latest tweets</h2>
         <div class="commet_card">
           <div class="comment_title">Nemo enim ipsam voluptatem</div>
@@ -424,27 +421,27 @@
             <div class="date">12 hours ago</div>
           </div>
         </div>
-      </div>
+      </section>
       <!-- end footer_comments -->
 
       <!-- begin footer_tags  -->
-      <div class="footer_tags">
+      <section class="footer_tags">
         <h2 class="section_title">Tags</h2>
         <div class="tags_card">
-          <a href="#">Nam</a><a href="#">libero</a><a href="#" class="is-popular">tempore</a><a href="#">cum</a><a href="#">soluta</a><a href="#">nobis</a><a href="#">temporibus</a><a href="#">lorem</a><a href="#">ipsum</a><a href="#">dolor</a><a href="#">sit</a><a href="#">amet</a><a href="#">Nam</a><a href="#">libero</a><a href="#">tempore</a><a href="#">cum</a><a href="#">soluta</a><a href="#">nobis</a><a href="#">Temporibus</a><a href="#">autem</a><a href="#">quibusdam</a>
+          <a href="#">Nam</a> <a href="#">libero</a> <a href="#" class="is_popular">tempore</a> <a href="#">cum</a> <a href="#">soluta</a> <a href="#">nobis</a> <a href="#">temporibus</a> <a href="#">lorem</a> <a href="#">ipsum</a> <a href="#">dolor</a> <a href="#">sit</a> <a href="#">amet</a> <a href="#">Nam</a> <a href="#">libero</a> <a href="#">tempore</a> <a href="#">cum</a> <a href="#">soluta</a> <a href="#">nobis</a> <a href="#">Temporibus</a> <a href="#">autem</a> <a href="#">quibusdam</a> 
         </div>
-      </div>
+      </section>
       <!-- end footer_tags -->
-
+</section>
       <!-- begin bottom_line  -->
       <div class="bottom_line">
         <div class="copy">Copyright © 2010 - NEWSPLEX - All rights reserved. Design by Ionut Girbea</div>
         <div class="bottom_social">
-          <a href="#" class="footer_social_delicious"></a>
-          <a href="#" class="footer_social_flickr"></a>
-          <a href="#" class="footer_social_facebook"></a>
-          <a href="#" class="footer_social_twitter"></a>
-          <a href="#" class="footer_social_stumbleupon"></a>
+          <a href="#" class="del"></a>
+          <a href="#" class="flkr"></a>
+          <a href="#" class="fb"></a>
+          <a href="#" class="tw"></a>
+          <a href="#" class="stu"></a>
         </div>
       </div>
       <!-- end bottom_line -->
