--- a/index.html
+++ b/index.html
@@ -53,7 +53,14 @@
         <li><a href="#">Homepage</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Full width</a></li>
-        <li><a href="#">Gallery</a></li>
+        <li><a href="#">Gallery</a>
+          <ul>
+            <li><a href="#">Gallery1</a></li>
+            <li><a href="#">Gallery2</a></li>
+            <li><a href="#">Gallery3</a></li>
+            <li><a href="#">Gallery4</a></li>
+          </ul>
+        </li>
         <li><a href="#">Headings</a></li>
         <li><a href="#">Posts</a></li>
         <li><a href="#">Contacts</a></li>
@@ -305,13 +312,19 @@
       <section class="side_nav">
         <nav>
         <ul>
-          <li class="is-active"><a href="#">Design and Interfaces <i></i></a></li>
-          <li><a href="#">Design and Interfaces <i></i></a></li>
-          <li><a href="#">Design and Interfaces <i></i></a></li>
-          <li><a href="#">Design and Interfaces <i></i></a></li>
-          <li><a href="#">Design and Interfaces <i></i></a></li>
-          <li><a href="#">Design and Interfaces <i></i></a></li>
-          <li><a href="#">Design and Interfaces <i></i></a></li>
+          <li class="is_active"><a href="#">Design and Interfaces</a>
+            <ul>
+            <li class="current"><a href="#">Design and Interfaces</a></li>
+            <li><a href="#">Design and Interfaces</a></li>
+            <li><a href="#">Design and Interfaces</a></li>
+            </ul>
+          </li>
+          <li><a href="#">Design and Interfaces</a></li>
+          <li><a href="#">Design and Interfaces</a></li>
+          <li><a href="#">Design and Interfaces</a></li>
+          <li><a href="#">Design and Interfaces</a></li>
+          <li><a href="#">Design and Interfaces</a></li>
+          <li><a href="#">Design and Interfaces</a></li>
         </ul>
         </nav>
       </section>
