complete without js,img

--- a/index.html
+++ b/index.html
@@ -15,8 +15,16 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <script type="text/javascript" src="js/selectivizr-min.js"></script>
+        <script type="text/javascript" src="js/switchers.js"></script>
+<!--[if (gte IE 6)&(lte IE 8)]>
+  <script type="text/javascript" src="selectivizr.js"></script>
+  <noscript><link rel="stylesheet" href="style.css" /></noscript>
+<![endif]-->
+<!--[if lte IE 8]><link rel="stylesheet" href="ie8.css" /><![endif]-->
   </head>
   <body>
+  <div class="wrap">
   <!-- begin topline  -->
   <div class="topline">
      <div class="topline__in">
@@ -383,6 +391,7 @@
     <!-- end sidebar -->
   </div>
   <!-- end l -->
+  </div>
   <!-- begin site-footer  -->
   <footer class="site_footer">
     <div class="footer__in">
